Fix landing background on mobile, various improvements

--- a/main.css
+++ b/main.css
@@ -63,20 +63,20 @@ video {
 
 footer {
   margin-top: 25vh;
-  margin-bottom: 3em;
+  margin-bottom: 2em;
   color: var(--text-color-dim);
   font-size: 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
-.footer-icon {
+footer>img {
   width: 50px;
   height: 50px;
   object-fit: contain;
-  margin-bottom: 8px;
+  user-select: none;
 }
 
 /*MARK: button
@@ -113,7 +113,6 @@ footer {
     box-shadow: 0 0 10px 0px color-mix(in srgb, white 30%, transparent);
   }
 }
-
 
 .button .icon {
   padding: 0px 15px 0px 0px;
